Wed Mar 26 08:29:43 2014  mo khan  <mo@mokhan.ca>

	* lib/rubygem.rb: fix spelling of Jim Weirich.  [Fixes GH-577]

Wed Mar 26 01:55:45 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* addr2line.c (rb_dump_backtrace_with_lines): a function to get must
	  be a function in the main executable, whose absolute path is not
	  available by dladdr, and ruby get it by /proc/self/exe on Linux.

Wed Mar 26 01:34:50 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* addr2line.c (fill_lines): skip if path is NULL.

Tue Mar 25 23:57:17 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_yylex): only a newline after label should be
	  significant.  [ruby-core:61658] [Bug #9669]

Tue Mar 25 23:32:25 2014  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* ext/pathname/lib/pathname.rb (Pathname#join): remove unnecessary
	  unshift.

	* test/pathname/test_pathname.rb (TestPathname#test_join): add tests.

Tue Mar 25 16:47:36 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (lex_state_e, parser_params, f_arglist, parser_yylex):
	  separate EXPR_LABELARG from EXPR_BEG and let newline significant,
	  so that required keyword argument can place at the end of
	  argument list without parentheses.  [ruby-core:61658] [Bug #9669]

Mon Mar 24 22:19:56 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (ripper_initialize): filename can not be modified.

Mon Mar 24 15:19:47 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* addr2line.c (rb_dump_backtrace_with_lines): fetch path of the
	  executable from /proc/self/exe on Linux.

Mon Mar 24 14:14:37 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* gc.c: Fix up default GC params by @csfrancis [fix GH-556]

Mon Mar 24 13:13:36 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* addr2line.c (parse_debug_line_cu): explicitly specify signed char
	  because DWARF's line_Base is signed char and char maybe unsigned.
	  patched by Rei Odaira. [ruby-dev:48068] [Bug #9654]

Sun Mar 23 11:03:50 2014  Kohei Suzuki  <eagletmt@gmail.com>
