@@ -978,6 +978,9 @@ VALUE rb_gcd_normal(VALUE self, VALUE other);
 VALUE rb_gcd_gmp(VALUE x, VALUE y);
 #endif
 
+/* re.c */
+long rb_reg_search0(VALUE, VALUE, long, int, int);
+
 /* util.c */
 extern const signed char ruby_digit36_to_number_table[];
 
